--- a/templates/base_d1.html
+++ b/templates/base_d1.html
@@ -22,6 +22,7 @@
                             {% endif %}
                         {% endfor %}
                         <a href="{% url 'blogindex' %}" class="button">Blog </a>
+                        <a href="/" class="button"> {% trans "Accueil" %}</a>
                         <a href="{% url 'logout' %}" class="button"> Logout</a>
                     </form>
                 </div>
