--- a/templates/dossier.html
+++ b/templates/dossier.html
@@ -18,11 +18,11 @@
         <tr><td><img src="/static/images/folder.png"></td><td><a href="{% url 'dossier' parent.parentId.id %}">..</td><td></td></tr>
 {% endif %}
         {% for doc in documents %}
-        <tr><td><img src="/static/images/file.png"></td><td><a href="{{ doc.docfile.url }}">{{ doc.nicename }}</td><td>{{ doc.comment }}</td></tr>
+        <tr><td><img src="/static/images/file.png"></td><td><a href="{{ doc.docfile.url }}">{{ doc.nicename }}</td><td>{{ doc.comment|default_if_none:"&nbsp;" }}</td></tr>
         {% endfor %}
 
      {% for enfant in enfants %}
-        <tr><td><img src="/static/images/folder.png"></td><td><a href="{% url 'dossier' enfant.id %}" > {{ enfant.nomdossier }}</a></td><td>{{ enfant.comment }}</td></tr>
+        <tr><td><img src="/static/images/folder.png"></td><td><a href="{% url 'dossier' enfant.id %}" > {{ enfant.nomdossier }}</a></td><td>{{ enfant.comment|default_if_none:"&nbsp;" }}</td></tr>
      {% endfor %}
 
     </table>
