--- a/templates/dossier.html
+++ b/templates/dossier.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-{% if parent.parentId.id %}
-    <h4><a href="{% url 'dossier' parent.parentId.id %}">  {{ parent.parentId }}</a> << {{ parent.nomdossier }}</h4>
+{% if parent.parentId.id != parent.id %}
+    <h4><a href="{% url 'dossierfolder' parent.parentId.id %}">  {{ parent.parentId }}</a> << {{ parent.nomdossier }}</h4>
 {% else %}
     <h4> >> {{ parent.nomdossier }}</h4>
 {% endif %}
@@ -15,41 +15,38 @@
             <th width="239">{% trans "Commentaires" %}</th>
         </tr>
 {% if parent.parentId.id %}
-        <tr><td><img src="/static/images/folder.png"></td><td><a href="{% url 'dossier' parent.parentId.id %}">..</td><td></td></tr>
+        <tr><td><img src="/static/images/folder.png"></td><td><a href="{% url 'dossierfolder' parent.parentId.id %}">..</a></td><td></td></tr>
 {% endif %}
-        {% for doc in documents %}
-        <tr><td><img src="/static/images/file.png"></td><td><a href="{{ doc.docfile.url }}">{{ doc.nicename }}</td><td>{{ doc.comment|default_if_none:"&nbsp;" }}</td></tr>
-        {% endfor %}
-
-     {% for enfant in enfants %}
-        <tr><td><img src="/static/images/folder.png"></td><td><a href="{% url 'dossier' enfant.id %}" > {{ enfant.nomdossier }}</a></td><td>{{ enfant.comment|default_if_none:"&nbsp;" }}</td></tr>
-     {% endfor %}
-
+    {% for doc in documents %}
+        <tr><td><img src="/static/images/file.png"></td><td><a href="{{ doc.docfile.url }}">{{ doc.nicename }}</a></td><td>{{ doc.comment|default_if_none:"&nbsp;" }}</td></tr>
+    {% endfor %}
+    {% for enfant in enfants %}
+        {% if enfant.id > 1 %}
+            <tr><td><img src="/static/images/folder.png"></td><td><a href="{% url 'dossierfolder' enfant.id %}" > {{ enfant.nomdossier }}</a></td><td>{{ enfant.comment|default_if_none:"&nbsp;" }}</td></tr>
+        {% endif %}
+    {% endfor %}
     </table>
 
 {% endblock content %}
 
 {% block lateral %}
-
-<h4>{% trans "Pour ajouter un sous-dossier au dossier" %}</h4>
-
-<h4>{{ dossiernom }}</h4>
-
-    <p><a href="{% url 'dossier_new' pid %}" class="btn-gauche" >{% trans "Créer un sous-dossier" %}</a></p>
-
+    <h5>{% trans "Pour ajouter un sous-dossier au dossier" %}</h5>
+    <b>{{ dossiernom }}</b>
+    <p><a href="{% url 'dossier_new' pid %}" class="w3-button w3-theme-l5" >{% trans "Créer un sous-dossier" %}</a></p>
 {% endblock lateral %}
 
 {% block boitecontent %}
-    <h4>{% trans "Pour ajouter un document au dossier" %}{{ dossiernom }}</h4>
+    <h5>{% trans "Pour ajouter un document au dossier" %}</h5>
+    <p>
+    <b>{{ dossiernom }}</b><br>
+    <b>{% trans "PAS D'ACCENT dans les noms des fichiers" %}</b></p>
 
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="hidden" name="pid" value="{{ pid }}" />
-        <p><input type="submit" value={% trans "Téléverser" %}  class="btn-gauche"/></p>
+        <p><input type="submit" value={% trans "Téléverser" %} class="w3-button w3-theme-l5"/></p>
     </form>
-
-
 {% endblock %}
 
 
